# madness

./: .env  LICENSE  README.md  api_exploration.ipynb  bracket-setup.ipynb  bracket.py  construct_bracket.py  mm-with-team-codes.csv  pyproject.toml  requirements.txt  run_server.py  test-bracket-script.py
bracket-data/2025/: mm-with-team-codes-and-odds-api-name.csv  mm-with-team-codes.csv
buggy-bracket-data/: bracket-as-json.json  print-bracket.html
static/: styles.css
templates/: index.html
